change to myapk

--- a/index.html
+++ b/index.html
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
-    <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyCUQf_f5lzX9T9Eq0M3vPcwRjS3vKfvQNw",
-        authDomain: "mychat-frbs.firebaseapp.com",
-        databaseURL: "https://mychat-frbs.firebaseio.com",
-        projectId: "mychat-frbs",
-        storageBucket: "mychat-frbs.appspot.com",
-        messagingSenderId: "813678620081"
-      };
-      firebase.initializeApp(config);
-    </script>
+    <title>MyAPK Home</title>
   </head>
 </html>
