--- a/index.html
+++ b/index.html
@@ -2,5 +2,13 @@
 <html>
   <head>
     <title>MyAPK Home</title>
+    <style>
+      #top-nav {
+        background-color:blue;
+      }
+    </style>
   </head>
+  <body>
+    <nav id="top-nav"></nav>
+  </body>
 </html>
