--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <style>
       #top-nav {
         background-color:blue;
+        height:50px;
+        width:100%;
       }
     </style>
   </head>
