--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>MyAPK Home</title>
     <style>
+      body {
+        margin:0px;
+      }
       #top-nav {
         background-color:blue;
         height:50px;
