--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         background-color:blue;
         height:50px;
         width:100%;
+        font-size:2em;
       }
     </style>
   </head>
