--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         height:50px;
         width:100%;
         font-size:2em;
+        font-family:sans-serif;
       }
     </style>
   </head>
   <body>
-    <nav id="top-nav"></nav>
+    <nav id="top-nav"><h1</nav>
   </body>
 </html>
