--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </style>
   </head>
   <body>
-    <nav id="top-nav"><h1</nav>
+    <nav id="top-nav"><h1>MyAPK</h1></nav>
   </body>
 </html>
