--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         background-color:blue;
         height:50px;
         width:100%;
-        font-size:2em;
+        font-size:30px;
         font-family:sans-serif;
+        margin:0px;
       }
     </style>
   </head>
