--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         font-family:sans-serif;
         margin:0px;
       }
+      h1 {
+        margin:inherit;
+      }
     </style>
   </head>
   <body>
