--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         margin:0px;
       }
       h1 {
-        margin:inherit;
-        float:center;
+        margin-top:inherit;
+        margin-bottom:inherit;
+        margin-left:50px;
       }
     </style>
   </head>
