--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       }
       #top-nav {
         background-color:blue;
-        height:50px;
+        height:60px;
         width:100%;
         font-size:30px;
         font-family:sans-serif;
@@ -18,6 +18,7 @@
         margin-top:inherit;
         margin-bottom:inherit;
         margin-left:50px;
+        float:center;
       }
     </style>
   </head>
